--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,8 +1,11 @@
 <section id="about">
     <h2>About</h2>
     <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur commodi consequatur
-        ea error fugit illo itaque laborum modi repellendus voluptatibus! Beatae commodi culpa
-        ducimus, eius excepturi non odit quaerat vel.
+        Das CoderDojo Schöneweide ist ein Club für Kinder und Jugendliche zwischen
+        7 und 17 Jahren, die Interesse und Spaß daran haben, Programmieren zu lernen.
+        Es wird von einer Gruppe Studierender der HTW Berlin geleitet und organisiert, und soll
+        dabei helfen, die Grundlagen des Programmierens auf kreative Art und Weise an Kinder
+        und Jugendliche zu vermitteln und sie zum eigenständigen Ausprobieren und Forschen
+        motivieren.
     </p>
 </section>
