--- a/assets/main.scss
+++ b/assets/main.scss
@@ -56,7 +56,7 @@ header {
   }
 
   nav {
-    padding: 1rem 2rem;
+    padding: 1rem 1.5rem;
 
     input, label {
       display: none;
@@ -72,6 +72,7 @@ header {
         border: 1px solid $color-dark;
         border-radius: 2px;
         padding: 0.5rem;
+        margin: 0 0.5rem;
         background-color: $color-light;
       }
     }
