add impressum with obfuscated contact information

--- a/_includes/events.html
+++ b/_includes/events.html
@@ -1,8 +1,10 @@
 <section id="events">
     <h2>Events</h2>
     <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur commodi consequatur
-        ea error fugit illo itaque laborum modi repellendus voluptatibus! Beatae commodi culpa
-        ducimus, eius excepturi non odit quaerat vel.
+        Momentan sind noch keine Events geplant. In Zukunft wirst du dich über die
+        <a href="https://zen.coderdojo.com/dojos/de/berlin/schoeneweide-berlin" title="CoderDojo Schöneweide auf ZEN">
+          CoderDojo-Zen Seite
+        </a>
+        für Events anmelden können. Dafür ist ein Konto auf Zen notwendig. 
     </p>
 </section>
