--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,6 +24,8 @@
                 <li><a href="{{ site.url }}#about">About</a></li>
                 <li><a href="{{ site.url }}#events">Events</a></li>
                 <li><a href="{{ site.url }}#team">Team</a></li>
+                <li><a href="{{ site.url }}/blog.html">Blog</a></li>
+                <li><a href="{{ site.url }}/impressum.html">Impressum</a></li>
             </ul>
         </nav>
     </div>
