started making style changes

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
         </a>
     </div>
 
-    <div class="background-main wrapper">
+    <div class="wrapper">
         <nav class="site-nav">
             <input type="checkbox" id="nav-trigger" class="nav-trigger" />
             <label for="nav-trigger">
