--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -1,4 +1,6 @@
 <aside>
+  <img class="site-logo" src="{{ "/assets/img/logo.jpg" | relative_url }}" alt="logo">
+
     <h2>Kontakt</h2>
     {%- include social.html -%}
     {%- if site.posts.size > 0 -%}
