made logo in header big and centered

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -8,7 +8,7 @@ $color-dark: #111111 !default;
 $color-light: #ffffff !default;
 $color-main: #f2a23a !default;
 
-$wrapper-width: 800px !default;
+$wrapper-width: 900px !default;
 
 /* General */
 
@@ -23,14 +23,9 @@ body {
   background-color: $color-light;
 }
 
-h1 {
-  font-weight: normal;
-  font-size: 3rem;
-}
-
 .wrapper {
   max-width: $wrapper-width;
-  margin: 1rem auto;
+  margin: 2rem auto;
 }
 
 .background-main {
@@ -45,13 +40,21 @@ header {
     text-decoration: none;
     color: $color-dark;
 
-    h1 {
-      display: inline;
-      font-size: 2.85rem;
-      vertical-align: top;
+    .hidden-title {
+      display: none;
     }
 
+    .site-logo {
+      display: block;
+      width: 40rem;
+      max-width: 100%;
+      margin: 0 auto;
+    }
 
+    .site-subtitle {
+      text-align: center;
+      font-size: 4rem;
+    }
   }
 
   nav {
@@ -111,9 +114,6 @@ main {
     padding: 0.5rem 1.5rem;
     border-left: 1px solid $color-main;
     //background-color: #ebddc7;
-    img {
-      max-height: 4rem;
-    }
 
     .social {
       list-style: none;
