--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,6 +5,8 @@
   {%- seo -%}
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
   <script src="scripts/obfuscate.js"></script>
+  <script type="module" src="scripts/teamView.js"></script>
+
   {%- feed_meta -%}
   {%- if jekyll.environment == 'production' and site.google_analytics -%}
     {%- include google-analytics.html -%}
