--- a/_includes/team.html
+++ b/_includes/team.html
@@ -1,30 +1,6 @@
 <section id="team">
     <h2>Team</h2>
-    <ul>
-        <li>
-            <h3>Peter Arbeitsloser</h3>
-            <img src="{{ "/assets/img/img.png" | relative_url }}" alt="team member">
-            <span>I don't know</span>
-        </li>
-        <li>
-            <h3>Sandra Admin</h3>
-            <img src="{{ "/assets/img/img.png" | relative_url }}" alt="team member">
-            <span>I don't know</span>
-        </li>
-        <li>
-            <h3>Bob Vorstand</h3>
-            <img src="{{ "/assets/img/img.png" | relative_url }}" alt="team member">
-            <span>I don't know</span>
-        </li>
-        <li>
-            <h3>Konrad Koch</h3>
-            <img src="{{ "/assets/img/img.png" | relative_url }}" alt="team member">
-            <span>I don't know</span>
-        </li>
-        <li>
-            <h3>John of Us</h3>
-            <img src="{{ "/assets/img/img.png" | relative_url }}" alt="team member">
-            <span>I don't know</span>
-        </li>
+    <ul id="teamMemberList">
+
     </ul>
 </section>
