--- a/assets/main.scss
+++ b/assets/main.scss
@@ -159,6 +159,7 @@ main {
 
   #team {
     background-color: $color-main;
+
     h2 {
       text-align: center;
     }
@@ -174,6 +175,7 @@ main {
         position: relative;
         max-width: 12rem;
         margin: 0.3rem;
+        vertical-align: top;
 
         img {
           max-width: 100%;
@@ -182,13 +184,13 @@ main {
         h3 {
           position: absolute;
           top: 0;
-          left: 0;
+          width: 100%;
         }
 
-        span {
+        p {
           position: absolute;
           bottom: 0;
-          left: 0;
+          width: 100%;
         }
       }
     }
