--- a/_includes/blog.html
+++ b/_includes/blog.html
@@ -1,8 +1,6 @@
-<aside>
-    <h2>Kontakt</h2>
-    {%- include social.html -%}
+<section id="all-posts">
+    <h2>Blogeinträge</h2>
     {%- if site.posts.size > 0 -%}
-    <h2>{{ page.list_title | default: "Blog" }}</h2>
     <ul class="post-list">
         {%- for post in site.posts -%}
         <li>
@@ -16,6 +14,5 @@
         </li>
         {%- endfor -%}
     </ul>
-    <a class="button" href="{{ site.url }}/blog.html">Alle Blogeinträge</a>
     {%- endif -%}
-</aside>
+</section>
