added new event and styled all events in a list

--- a/_includes/events.html
+++ b/_includes/events.html
@@ -1,16 +1,24 @@
 <section id="events">
     <h2>Events</h2>
-    <p>
-      Am 26.03. findet von 13.00 - 16.00 unsere erste öffentliche Veranstaltung statt.
-      In einem Workshop im Rahmen des Girls Day (für Schülerinnen* ab der 5. Klasse)
-      erkunden wir, wie man als Software-Entwicklerin die Welt verbessern kann. Die Anmeldung
-      ist ausnahmsweise nicht über Zen, sondern nur über <a href="https://www.girls-day.de/@/Show/htw-berlin.1/als-software-entwicklerin-die-welt-verbessern">girls-day.de</a>
-      möglich. Mehr Infos unter ebendieser Seite.
-    </p>
+    <ul>
+        <li>
+            Am 26.03. findet von 13.00 - 16.00 unsere erste öffentliche Veranstaltung statt.
+            In einem Workshop im Rahmen des Girls Day (für Schülerinnen* ab der 5. Klasse)
+            erkunden wir, wie man als Software-Entwicklerin die Welt verbessern kann. Die Anmeldung
+            ist ausnahmsweise nicht über Zen, sondern nur über <a
+                href="https://www.girls-day.de/@/Show/htw-berlin.1/als-software-entwicklerin-die-welt-verbessern">girls-day.de</a>
+            möglich. Mehr Infos unter ebendieser Seite.
+        </li>
+        <br>
+        <li>
+            Am 25.04. findet von 14.00 - 17.00 unsere zweite öffentliche Veranstaltung statt.
+            Weitere Informationen hierzu folgen noch.
+        </li>
+    </ul>
     <p>
         Für zukünftige Events kannst du dich über die
         <a href="https://zen.coderdojo.com/dojos/de/berlin/schoeneweide-berlin" title="CoderDojo Schöneweide auf ZEN">
-          CoderDojo-Zen Seite
+            CoderDojo-Zen Seite
         </a>
         anmelden. Dafür ist ein Konto auf Zen notwendig.
     </p>
