--- a/_includes/events.html
+++ b/_includes/events.html
@@ -11,15 +11,11 @@
         </li>
         <br>
         <li>
-            Am 25.04. findet von 14.00 - 17.00 unsere zweite öffentliche Veranstaltung statt.
-            Weitere Informationen hierzu folgen noch.
+            Am 25.04. findet von 14.00 - 16.15 unsere zweite öffentliche Veranstaltung statt. 
+            Für Anfänger*innen und Wiedereinsteiger*innen bieten wir einen Workshop zum Einstieg in die Programmierung.
+            Außerdem wird es eine Info-Runde über CoderDojo und Lernen bei CoderDojo für Erziehungsberechtigte geben.
+            Die Anmeldung erfolgt über die <a href="https://zen.coderdojo.com/dojos/de/berlin/schoeneweide-berlin" title="CoderDojo Schöneweide auf ZEN">
+            CoderDojo-Zen Seite</a>. Dafür ist ein Konto auf Zen notwendig.
         </li>
     </ul>
-    <p>
-        Für zukünftige Events kannst du dich über die
-        <a href="https://zen.coderdojo.com/dojos/de/berlin/schoeneweide-berlin" title="CoderDojo Schöneweide auf ZEN">
-            CoderDojo-Zen Seite
-        </a>
-        anmelden. Dafür ist ein Konto auf Zen notwendig.
-    </p>
 </section>
