added blog page, adapted layout, switched order of paragraphs in first blog post

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,10 +22,11 @@
             </label>
 
             <ul class="trigger">
-                <li><a href="{{ site.url }}#about">About</a></li>
-                <li><a href="{{ site.url }}#events">Events</a></li>
-                <li><a href="{{ site.url }}#team">Team</a></li>
-                <li><a href="{{ site.url }}/impressum.html">Impressum</a></li>
+                <li><a class="button" href="{{ site.url }}#about">About</a></li>
+                <li><a class="button" href="{{ site.url }}#events">Events</a></li>
+                <li><a class="button" href="{{ site.url }}#team">Team</a></li>
+                <li><a class="button" href="{{ site.url }}/blog.html">Blog</a></li>
+                <li><a class="button" href="{{ site.url }}/impressum.html">Impressum</a></li>
             </ul>
         </nav>
     </div>
