--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -2,7 +2,6 @@
 layout: default
 ---
 
-<div class="wrapper columns">
+<div class="wrapper">
   {%- include blog.html -%}
-  {%- include aside.html -%}
 </div>
