durchgehend Titel usw auf deutsch geschrieben

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,5 +1,5 @@
 <section id="about">
-    <h2>About</h2>
+    <h2>Über uns</h2>
     <p>
         Das CoderDojo Schöneweide ist ein Club für Kinder und Jugendliche zwischen
         7 und 17 Jahren, die Interesse und Spaß daran haben, Programmieren zu lernen.
