--- a/_includes/events.html
+++ b/_includes/events.html
@@ -1,5 +1,5 @@
 <section id="events">
-    <h2>Events</h2>
+    <h2>Veranstaltungen</h2>
     <ul>
         <li>
             Am 26.03. findet von 13.00 - 16.00 unsere erste öffentliche Veranstaltung statt.
@@ -11,7 +11,7 @@
         </li>
         <br>
         <li>
-            Am 25.04. findet von 14.00 - 16.15 unsere zweite öffentliche Veranstaltung statt. 
+            Am 25.04. findet von 14.00 - 16.15 unsere zweite öffentliche Veranstaltung statt.
             Für Anfänger*innen und Wiedereinsteiger*innen bieten wir einen Workshop zum Einstieg in die Programmierung.
             Außerdem wird es eine Info-Runde über CoderDojo und Lernen bei CoderDojo für Erziehungsberechtigte geben.
             Die Anmeldung erfolgt über die <a href="https://zen.coderdojo.com/dojos/de/berlin/schoeneweide-berlin" title="CoderDojo Schöneweide auf ZEN">
