--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer>
   <div class="wrapper">
-    <p>Created with <3 by the CoderDojo Schöneweide Team</p>
-    <p>Hosted on GitHub</p>
+    <p>Mit <3 gemacht vom CoderDojo Schöneweide Team</p>
+    <p>Auf GitHub gehostet</p>
   </div>
 </footer>
