--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,8 +22,8 @@
             </label>
 
             <ul class="trigger">
-                <li><a href="{{ site.url }}#about">About</a></li>
-                <li><a href="{{ site.url }}#events">Events</a></li>
+                <li><a href="{{ site.url }}#about">Über uns</a></li>
+                <li><a href="{{ site.url }}#events">Veranstaltungen</a></li>
                 <li><a href="{{ site.url }}#team">Team</a></li>
                 <li><a href="{{ site.url }}/impressum.html">Impressum</a></li>
             </ul>
