--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,11 +22,11 @@
             </label>
 
             <ul class="trigger">
-                <li><a href="{{ site.url }}#about">Über uns</a></li>
-                <li><a href="{{ site.url }}#events">Veranstaltungen</a></li>
-                <li><a href="{{ site.url }}#team">Team</a></li>
+                <li><a class="button" href="{{ site.url }}#about">Über uns</a></li>
+                <li><a class="button" href="{{ site.url }}#events">Veranstaltungen</a></li>
+                <li><a class="button" href="{{ site.url }}#team">Team</a></li>
                 <li><a class="button" href="{{ site.url }}/blog.html">Blog</a></li>
-                <li><a href="{{ site.url }}/impressum.html">Impressum</a></li>
+                <li><a class="button" href="{{ site.url }}/impressum.html">Impressum</a></li>
             </ul>
         </nav>
     </div>
