--- a/_includes/events.html
+++ b/_includes/events.html
@@ -2,18 +2,15 @@
     <h2>Veranstaltungen</h2>
     <ul>
         <li>
-            Am 26.03. findet von 13.00 - 16.00 unsere erste öffentliche Veranstaltung statt.
-            In einem Workshop im Rahmen des Girls Day (für Schülerinnen* ab der 5. Klasse)
-            erkunden wir, wie man als Software-Entwicklerin die Welt verbessern kann. Die Anmeldung
-            ist ausnahmsweise nicht über Zen, sondern nur über <a
-                href="https://www.girls-day.de/@/Show/htw-berlin.1/als-software-entwicklerin-die-welt-verbessern">girls-day.de</a>
-            möglich. Mehr Infos unter ebendieser Seite.
+            Unsere erste öffentliche Veranstaltung am 26.03. im Rahmen des Girls Day muss leider entfallen.
         </li>
         <br>
         <li>
-            Am 25.04. findet von 14.00 - 16.15 unsere zweite öffentliche Veranstaltung statt.
-            Für Anfänger*innen und Wiedereinsteiger*innen bieten wir einen Workshop zum Einstieg in die Programmierung.
-            Außerdem wird es eine Info-Runde über CoderDojo und Lernen bei CoderDojo für Erziehungsberechtigte geben.
+            Am 25.04. findet soll von 14.00 - 16.15 unsere erste öffentliche Veranstaltung stattfinden.
+            Diese Veranstaltung wird in keinem Fall eine Präsenzveranstaltung. Ob und wie sie stattfindet werden wir 
+            demnächst bekannt geben.
+            Für Anfänger*innen und Wiedereinsteiger*innen wollen wir einen Workshop zum Einstieg in die Programmierung anbieten.
+            Außerdem soll es eine Info-Runde über CoderDojo und Lernen bei CoderDojo für Erziehungsberechtigte geben.
             Die Anmeldung erfolgt über die <a href="https://zen.coderdojo.com/dojos/de/berlin/schoeneweide-berlin" title="CoderDojo Schöneweide auf ZEN">
             CoderDojo-Zen Seite</a>. Dafür ist ein Konto auf Zen notwendig.
         </li>
