Updated logo to new version

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
         {%- assign page_paths = site.header_pages | default: default_paths -%}
         <a class="site-title" href="{{ "/" | relative_url }}">
           <h1 class="hidden-title" rel="author">{{ site.title | escape }}</h1>
-          <img class="site-logo" src="{{ "/assets/img/logo.jpg" | relative_url }}" alt="logo">
+          <img class="site-logo" src="{{ "/assets/img/logo_v2.jpg" | relative_url }}" alt="logo">
           <div class="site-subtitle">Schöneweide</div>
         </a>
     </div>
