--- a/_includes/events.html
+++ b/_includes/events.html
@@ -2,16 +2,10 @@
     <h2>Veranstaltungen</h2>
     <ul>
         <li>
-            Unsere erste öffentliche Veranstaltung am 26.03. im Rahmen des Girls Day muss leider entfallen.
+            Unsere erste Veranstaltung am 25.04.2020 muss leider entfallen.
         </li>
-        <br>
         <li>
-            Am 25.04. findet soll von 14.00 - 16.15 unsere erste öffentliche Veranstaltung stattfinden.
-            Diese Veranstaltung wird in keinem Fall eine Präsenzveranstaltung. Ob und wie sie stattfindet werden wir 
-            demnächst bekannt geben.
-            Für Anfänger*innen und Wiedereinsteiger*innen wollen wir einen Workshop zum Einstieg in die Programmierung anbieten.
-            Außerdem soll es eine Info-Runde über CoderDojo und Lernen bei CoderDojo für Erziehungsberechtigte geben.
-            Die Anmeldung erfolgt über die <a href="https://zen.coderdojo.com/dojos/de/berlin/schoeneweide-berlin" title="CoderDojo Schöneweide auf ZEN">
+            Die Anmeldung für Veranstaltungen erfolgt über die <a href="https://zen.coderdojo.com/dojos/de/berlin/schoeneweide-berlin" title="CoderDojo Schöneweide auf ZEN">
             CoderDojo-Zen Seite</a>. Dafür ist ein Konto auf Zen notwendig.
         </li>
     </ul>
