--- a/assets/main.scss
+++ b/assets/main.scss
@@ -157,27 +157,78 @@ main {
       li {
         display: inline-block;
         position: relative;
-        max-width: 12rem;
-        margin: 0.3rem;
-        vertical-align: top;
+        width: 12rem;
+        height: 12rem;
+        margin: 0.4rem 0.3rem;
 
-        img {
-          max-width: 100%;
-        }
-
-        h3 {
-          position: absolute;
-          top: 0;
-          width: 100%;
-        }
-
-        p {
+        .front {
           position: absolute;
           bottom: 0;
+          top: 0;
+          animation: flipVisible 250ms;
+
+          img {
+            max-width: 100%;
+          }
+
+          h3 {
+            color: white;
+            text-shadow: 0 0 0.3rem black;
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+          }
+        }
+
+        .back {
+          background-color: white;
+          margin: 0;
+          position: absolute;
+          bottom: 0;
+          top: 0;
           width: 100%;
+          padding: 1rem;
+          transform: rotateY(-90deg);
+          animation: flipAway 250ms;
+        }
+
+        &:hover .front {
+          animation: flipAway 250ms forwards;
+        }
+
+        &:hover .back {
+          animation: flipVisible 250ms forwards;
         }
       }
     }
+  }
+}
+
+@keyframes flipAway {
+  0% {
+    transform: rotateY(0deg);
+  }
+
+  50% {
+    transform: rotateY(90deg);
+  }
+
+  100% {
+    transform: rotateY(90deg);
+  }
+}
+
+@keyframes flipVisible {
+  0% {
+    transform: rotateY(-90deg);
+  }
+
+  50% {
+    transform: rotateY(-90deg);
+  }
+
+  100% {
+    transform: rotateY(0deg);
   }
 }
 
