--- a/assets/main.scss
+++ b/assets/main.scss
@@ -146,6 +146,7 @@ main {
 
     h2 {
       text-align: center;
+      color: $color-light;
     }
 
     ul {
@@ -172,8 +173,8 @@ main {
           }
 
           h3 {
-            color: white;
-            text-shadow: 0 0 0.3rem black;
+            color: $color-light;
+            text-shadow: 0 0 0.3rem $color-dark;
             position: absolute;
             bottom: 0;
             width: 100%;
@@ -181,7 +182,7 @@ main {
         }
 
         .back {
-          background-color: white;
+          background-color: $color-light;
           margin: 0;
           position: absolute;
           bottom: 0;
